Use .valueOf() factory instead of deprecated wrapper type constructors