@@ -1,7 +1,7 @@
 /*
  *  JFLAP - Formal Languages and Automata Package
- * 
- * 
+ *
+ *
  *  Susan H. Rodger
  *  Computer Science Department
  *  Duke University
@@ -32,24 +32,24 @@ import javax.swing.table.AbstractTableModel;
  * The <CODE>LRParseTable</CODE> is an LR(1) parse table. It also has the
  * ability to function as a <CODE>TableModel</CODE> for a <CODE>javax.swing.JTable</CODE>.
  * <P>
- * 
+ *
  * In this table, entries are either of the form "", "s#", "r#", "acc", or "#",
  * where # is a number. If a user change is not parseable into one of those
  * forms, then the entry will be unchanged.
- * 
+ *
  * @author Thomas Finley
  */
 
 public class LRParseTable extends AbstractTableModel implements Serializable,
 		Cloneable {
 	/**
-	 * 
+	 *
 	 */
 	private static final long serialVersionUID = 1L;
 
 	/**
 	 * Instantiates a new LR parse table.
-	 * 
+	 *
 	 * @param grammar
 	 *            the augmented grammar
 	 * @param fsa
@@ -66,10 +66,9 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 		variables = (String[]) vars.toArray(new String[0]);
 
 		for (int i = 0; i < terminals.length; i++)
-			symbolsToColumn.put(terminals[i], new Integer(i + 1));
+			symbolsToColumn.put(terminals[i], Integer.valueOf(i + 1));
 		for (int i = 0; i < variables.length; i++)
-			symbolsToColumn.put(variables[i], new Integer(i + 1
-					+ terminals.length));
+			symbolsToColumn.put(variables[i], Integer.valueOf(i + 1 + terminals.length));
 		entries = new String[fsa.getStates().length][terminals.length
 				+ variables.length + 1];
 		for (int i = 0; i < entries.length; i++)
@@ -79,7 +78,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Instantiates a new LR parse table from another LR parse table.
-	 * 
+	 *
 	 * @param table
 	 *            the other LR parse table
 	 */
@@ -96,7 +95,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Returns a clone of this object.
-	 * 
+	 *
 	 * @return a copy of this object
 	 */
 	public Object clone() {
@@ -105,7 +104,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * This sets the table value for a state ID and a grammar symbol.
-	 * 
+	 *
 	 * @param value
 	 *            the value to put in the table
 	 * @param id
@@ -121,7 +120,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * This will return the value for a given state ID and grammar symbol.
-	 * 
+	 *
 	 * @param id
 	 *            the state ID
 	 * @param symbol
@@ -139,7 +138,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 	 * items means that that configuration is considered an error (blank entry
 	 * in the table). A set with more than one item indicates ambiguity in the
 	 * parse table.
-	 * 
+	 *
 	 * @param id
 	 *            the state ID
 	 * @param symbol
@@ -154,7 +153,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Appends the parse table directive to existing parse table directives.
-	 * 
+	 *
 	 * @param directive
 	 *            the directive to add
 	 * @param id
@@ -170,7 +169,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Returns the column for a particular grammar symbol.
-	 * 
+	 *
 	 * @param symbol
 	 *            the grammar symbol
 	 * @return the column index of the column corresponding to that grammar
@@ -192,7 +191,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 	/**
 	 * Returns the number of rows, equal to the number of states in the original
 	 * DFA.
-	 * 
+	 *
 	 * @return the number of rows
 	 */
 	public int getRowCount() {
@@ -202,7 +201,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 	/**
 	 * Returns the number of columns, equals to the number of terminals,
 	 * nonterminals, plus one column for displaying the numbers of states.
-	 * 
+	 *
 	 * @return the number of columns
 	 */
 	public int getColumnCount() {
@@ -211,7 +210,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Returns the appropriate string for a value, and a column.
-	 * 
+	 *
 	 * @param value
 	 *            the value that was input into the table
 	 * @param column
@@ -259,7 +258,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 	/**
 	 * Given an entry in the parse table, returns the strings for that entry. If
 	 * any entry is not a good entry, it is ignored.
-	 * 
+	 *
 	 * @param input
 	 *            the input in the table
 	 */
@@ -278,7 +277,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Returns the name of a particular column.
-	 * 
+	 *
 	 * @param column
 	 *            the column index
 	 * @return the name of the column
@@ -293,7 +292,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Sets the value at a particular row and column.
-	 * 
+	 *
 	 * @param value
 	 *            the new value
 	 * @param row
@@ -319,7 +318,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Appends the parse table directive to existing parse table directives.
-	 * 
+	 *
 	 * @param directive
 	 *            the directive to add
 	 * @param row
@@ -343,7 +342,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 	 * items means that that configuration is considered an error (blank entry
 	 * in the table). A set with more than one item indicates ambiguity in the
 	 * parse table.
-	 * 
+	 *
 	 * @param row
 	 *            the row index
 	 * @param column
@@ -360,7 +359,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * All cells are editable except the first column.
-	 * 
+	 *
 	 * @param row
 	 *            the row index
 	 * @param column
@@ -373,7 +372,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Returns an desciption of a particular entry in a parse table.
-	 * 
+	 *
 	 * @param entry
 	 *            the entry
 	 * @return the description of that entry
@@ -402,7 +401,7 @@ public class LRParseTable extends AbstractTableModel implements Serializable,
 
 	/**
 	 * Gets a plaintext user readable description of the contents of a cell.
-	 * 
+	 *
 	 * @param row
 	 *            the row index
 	 * @param column
