@@ -1,7 +1,7 @@
 /*
  *  JFLAP - Formal Languages and Automata Package
- * 
- * 
+ *
+ *
  *  Susan H. Rodger
  *  Computer Science Department
  *  Duke University
@@ -35,13 +35,13 @@ import javax.swing.table.TableModel;
  * added convinience, and other variations for added customizability of the
  * highlighting (in case highlighted cells will not render properly with a
  * default cell renderer, for example).
- * 
+ *
  * @author Thomas Finley
  */
 
 public class HighlightTable extends JTable {
 	/**
-	 * 
+	 *
 	 */
 	private static final long serialVersionUID = 1L;
 
@@ -54,7 +54,7 @@ public class HighlightTable extends JTable {
 
 	/**
 	 * Highlights a particular cell.
-	 * 
+	 *
 	 * @param row
 	 *            the row index of the cell to highlight
 	 * @param column
@@ -66,7 +66,7 @@ public class HighlightTable extends JTable {
 
 	/**
 	 * Converts a row and column index to an index.
-	 * 
+	 *
 	 * @param row
 	 *            the row to get
 	 * @param column
@@ -78,21 +78,21 @@ public class HighlightTable extends JTable {
 
 	/**
 	 * Dehighlights a particular cell.
-	 * 
+	 *
 	 * @param row
 	 *            the row index of the cell to dehighlight
 	 * @param column
 	 *            the column index of the cell to dehighlight
 	 */
 	public void dehighlight(int row, int column) {
-		highlightRenderers.remove(new Integer(singleIndex(row, column)));
+		highlightRenderers.remove(Integer.valueOf(singleIndex(row, column)));
 		repaint();
 	}
 
 	/**
 	 * This method is the highlight method but allows the specification of a
 	 * custom table cell renderer.
-	 * 
+	 *
 	 * @param rc
 	 *            the array of row and column entries, done in the model-space
 	 *            rather than view-space of the table
@@ -112,7 +112,7 @@ public class HighlightTable extends JTable {
 	/**
 	 * This method is the highlight method but allows the specification of a
 	 * custom table cell renderer. This will retain previous highlightings.
-	 * 
+	 *
 	 * @param row
 	 *            the row index of the cell to highlight
 	 * @param column
@@ -127,7 +127,7 @@ public class HighlightTable extends JTable {
 			TableHighlighterRendererGenerator generator) {
 		if (highlightRenderers == null)
 			highlightRenderers = new HashMap<>();
-		Integer in = new Integer(singleIndex(row, column));
+		Integer in = Integer.valueOf(singleIndex(row, column));
 		highlightRenderers.put(in, generator.getRenderer(row, column));
 		repaint();
 	}
@@ -147,7 +147,7 @@ public class HighlightTable extends JTable {
 		int column2 = convertColumnIndexToModel(column);
 		if (highlightRenderers != null) {
 			TableCellRenderer ren = (TableCellRenderer) highlightRenderers
-					.get(new Integer(singleIndex(row, column2)));
+					.get(Integer.valueOf(singleIndex(row, column2)));
 			if (ren != null)
 				return ren;
 		}
@@ -161,7 +161,7 @@ public class HighlightTable extends JTable {
 	public static interface TableHighlighterRendererGenerator {
 		/**
 		 * Returns a table cell renderer for this row and column.
-		 * 
+		 *
 		 * @param row
 		 *            the row index to get the table cell renderer for
 		 * @param column
