@@ -1,7 +1,7 @@
 /*
  *  JFLAP - Formal Languages and Automata Package
- * 
- * 
+ *
+ *
  *  Susan H. Rodger
  *  Computer Science Department
  *  Duke University
@@ -34,19 +34,19 @@ import java.util.*;
  * viewing of grammars, with an extra field for a checkbox to indicate that a
  * production has been "processed," though what exactly that means is left to
  * the context in which this component is used.
- * 
+ *
  * @author Thomas Finley
  */
 
 public class GrammarViewer extends JTable {
 	/**
-	 * 
+	 *
 	 */
 	private static final long serialVersionUID = 1L;
 
 	/**
 	 * Instantiates a new <CODE>GrammarViewer</CODE>.
-	 * 
+	 *
 	 * @param grammar
 	 *            the grammar to display in this view
 	 */
@@ -61,7 +61,7 @@ public class GrammarViewer extends JTable {
 		for (int i = 0; i < prods.length; i++) {
 			data[i][0] = prods[i];
 			data[i][1] = Boolean.FALSE;
-			productionToRow.put(prods[i], new Integer(i));
+			productionToRow.put(prods[i], Integer.valueOf(i));
 		}
 		DefaultTableModel model = (DefaultTableModel) getModel();
 		model.setDataVector(data, columnNames);
@@ -73,7 +73,7 @@ public class GrammarViewer extends JTable {
 	/**
 	 * Returns the <CODE>Grammar</CODE> that this <CODE>GrammarViewer</CODE>
 	 * displays.
-	 * 
+	 *
 	 * @return this viewer's grammar
 	 */
 	public Grammar getGrammar() {
@@ -83,7 +83,7 @@ public class GrammarViewer extends JTable {
 	/**
 	 * Adds a selection listener to this grammar viewer. The listener will
 	 * receive events whenever the selection changes.
-	 * 
+	 *
 	 * @param listener
 	 *            the selection listener to add
 	 */
@@ -93,7 +93,7 @@ public class GrammarViewer extends JTable {
 
 	/**
 	 * Removes a selection listener from this grammar viewer.
-	 * 
+	 *
 	 * @param listener
 	 *            the selection listener to remove
 	 */
@@ -114,7 +114,7 @@ public class GrammarViewer extends JTable {
 
 	/**
 	 * Returns the currently selected productions.
-	 * 
+	 *
 	 * @return the currently selected productions
 	 */
 	public Production[] getSelected() {
@@ -128,7 +128,7 @@ public class GrammarViewer extends JTable {
 	/**
 	 * Sets the indicated production as either checked or unchecked
 	 * appropriately.
-	 * 
+	 *
 	 * @param production
 	 *            the production to set the "checkyness" for
 	 * @param checked
@@ -174,7 +174,7 @@ public class GrammarViewer extends JTable {
 	 */
 	private class GrammarTableModel extends DefaultTableModel {
 		/**
-		 * 
+		 *
 		 */
 		private static final long serialVersionUID = 1L;
 
