@@ -1,7 +1,7 @@
 /*
  *  JFLAP - Formal Languages and Automata Package
- * 
- * 
+ *
+ *
  *  Susan H. Rodger
  *  Computer Science Department
  *  Duke University
@@ -30,19 +30,19 @@ import javax.swing.table.*;
  * This is a table model for user definition of the first and follow sets for a
  * grammar. The first column are the variable names. The second column are the
  * first sets, the third column the follow sets.
- * 
+ *
  * @author Thomas Finley
  */
 
 public class FirstFollowModel extends AbstractTableModel {
 	/**
-	 * 
+	 *
 	 */
 	private static final long serialVersionUID = 1L;
 
 	/**
 	 * Instantiates a new <CODE>FirstFollowModel</CODE>.
-	 * 
+	 *
 	 * @param grammar
 	 *            the grammar for the first follow model, from which the
 	 *            variables are extracted for the first column
@@ -60,7 +60,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Retrives the first sets as shown in the table.
-	 * 
+	 *
 	 * @return the first sets, a map from all single symbols A in the grammar to
 	 *         the set of symbols that represent FIRST(A)
 	 */
@@ -70,7 +70,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Retrieves the follow sets as shown in the table.
-	 * 
+	 *
 	 * @return the follow sets, a map from all single variables A in the grammar
 	 *         to the set of symbols that represent FOLLOW(A)
 	 */
@@ -80,7 +80,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Set if the user can edit the first sets at this time.
-	 * 
+	 *
 	 * @param canEdit
 	 *            <CODE>true</CODE> if editing is allowed
 	 */
@@ -90,7 +90,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Set if the user can edit the follow sets at this time.
-	 * 
+	 *
 	 * @param canEdit
 	 *            <CODE>true</CODE> if editing is allowed
 	 */
@@ -100,7 +100,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * There are as many rows as there are variables.
-	 * 
+	 *
 	 * @return the number of variables
 	 */
 	public int getRowCount() {
@@ -110,7 +110,7 @@ public class FirstFollowModel extends AbstractTableModel {
 	/**
 	 * There are always three columns for the variables, the first sets, and the
 	 * follow sets.
-	 * 
+	 *
 	 * @return 3
 	 */
 	public int getColumnCount() {
@@ -119,7 +119,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Returns the name of a particular column.
-	 * 
+	 *
 	 * @param column
 	 *            the index of a column to get the name for
 	 */
@@ -129,7 +129,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Returns the value at each column.
-	 * 
+	 *
 	 * @param row
 	 *            the row to get data for
 	 * @param column
@@ -150,7 +150,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Returns if a table cell can be edited.
-	 * 
+	 *
 	 * @param row
 	 *            the row of the cell
 	 * @param column
@@ -162,7 +162,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Returns the character set at a particular location.
-	 * 
+	 *
 	 * @param row
 	 *            the row to get the set for; this will be a set for the
 	 *            variable at this row
@@ -189,7 +189,7 @@ public class FirstFollowModel extends AbstractTableModel {
 	 * and return a string with not duplicate characters. Only the first
 	 * instance of a character is preserved, and others are discarded. So, if
 	 * one were to pass in <I>abaacb</I>, this would return the string <I>abc</I>.
-	 * 
+	 *
 	 * @param s
 	 *            the string to process
 	 * @return the same string as was passed in but with duplicate characters
@@ -199,7 +199,7 @@ public class FirstFollowModel extends AbstractTableModel {
 		Set<Character> characters = new HashSet<>();
 		StringBuffer sb = new StringBuffer();
 		for (int i = 0; i < s.length(); i++) {
-			Character c = new Character(s.charAt(i));
+			Character c = Character.valueOf(s.charAt(i));
 			if (characters.add(c))
 				sb.append(c.charValue());
 		}
@@ -208,7 +208,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Sets the value at each column.
-	 * 
+	 *
 	 * @param value
 	 *            the new value
 	 * @param row
@@ -232,7 +232,7 @@ public class FirstFollowModel extends AbstractTableModel {
 
 	/**
 	 * Sets the set at a particular cell.
-	 * 
+	 *
 	 * @param set
 	 *            the set for the cell
 	 * @param row
